<resources>
    <string name="app_name">JH AirTracker</string>
    <string name="fab_content_desc">fab_content</string>
    <string name="content_description_flight">fligh_menu</string>
    <string name="content_description_home">home_menu</string>
    <string name="imageview">TImageView</string>
    <string name="jackson_hole_airport_n1250_east_airport_road">1250 East Airport Road</string>
    <string name="_307_733_7682">307–733–7682</string>
    <string name="info_jhairport_org">info@jhairport.org</string>
    <string name="info_jhflight_org">flightinfo@jhflight.org</string>
    <string name="fbo_general_manager">craig.foster@jhairport.org</string>
    <string name="fbo_customer_service_manager">customerservice@jhairport.org</string>
    <string name="airport_operations">airportoperations@jhairport.org</string>
    <string name="human_resources">hr@jhairport.org</string>
    <string name="lost_and_found">lostandfound@jhairport.org</string>
    <string name="communications_customer_experience">commcustomer@jhairport.org</string>
    <string name="contact_count_message">You have %1$d contacts</string>
    <string name="contacts_count">Contacts: %1$d</string>
    <string name="contact_info">Information</string>
    <string name="contactfab">contact</string>
    <string name="webcam">webcam</string>
    <string name="mainhome">Flights</string>
    <string name="jac">JAC</string>
    <string name="nointernet">nointernet</string>
    <string name="no_internet_connectiontitle">No Internet Connection</string>
    <string name="title_activity_photo">National Park</string>
    <string name="photo">photos</string>
    <string name="photoview">photoview</string>
    <string name="photoscroll">photoscroll</string>
    <string name="Photos">Grand Teton National Park</string>
    <string name="item1">flights</string>
    <string name="item3">contact</string>
    <string name="Contact" translatable="false">Contact</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="PO_Box_n159Jackson_WY_n83001">PO Box 159Jackson WY 83001</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="settings_header">Settings</string>
    <string name="new_features">New Feature - Sync for auto update</string>
    <string name="sync_title">Enable Sync</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Auto-downloads; Check required.</string>
    <string name="fab_settings">settings</string>
    <string name="feature_released">Feature released</string>
    <string name="JACAIRPORT_text">J A C</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="closeimage">closeimage</string>
    <string name="page_name">Settings</string>
    <string name="name_contact">Contact</string>
    <string name="send_feedback_title">Feedback</string>
    <string name="send_feedback_summary">send feedback</string>
    <string name="rate_us_title">Rate Our app!</string>
    <string name="rate_us_summary">rate us</string>
    <string name="share_app_title">Share this app with friends!</string>
    <string name="share_app_summary">share our app</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="submit">Submit</string>
    <string name="be_the_first_updated">Be the first updated</string>
    <string name="show_dialog">Show Dialog</string>
    <string name="no_internet_image_logo">no internet image logo</string>
    <string name="_0">0</string>
    <string name="rate_us">Rate  &amp; Feedback</string>
    <string name="_5_stars">5</string>
    <string name="_4_stars">4</string>
    <string name="_3_stars">3</string>
    <string name="_2_stars">2</string>
    <string name="_1_star">1</string>
    <string name="sample_item">Sample Item</string>
    <string name="airport_operations_email">operations@jhairport.org</string>
    <string name="lost_and_found_email">info@jhairport.org</string>
    <string name="human_resources_email">hr@jhairport.org</string>
    <string name="communications_customer_experience_email">megan.jenkins@jhairport.org</string>
    <string name="call_float">Call</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_call_message">Do you want to call %s?</string>
    <string name="card_view_icon">cardviewicon</string>
    <string name="opensplash">splashpage</string>
    <string name="placeholder_text">Grand Teton National Park</string>
    <string name="downloading_update">Downloading update…</string>
    <string name="zero_percent">0%</string>
    <string name="percentage_placeholder">%1$d%%</string>
    <string name="time_left_initial">Time Left: 00:00</string>
    <string name="time_left">Time Left: %1$s</string>
    <string name="download">Download</string>
    <string name="update_app_title">Update Your App</string>
    <string name="install">Install</string>
    <string name="changelog_title_placeholder">Changelog</string>
    <string name="checking_for_updates">Checking for Updates</string>
    <string name="app_update">App Update</string>
    <string name="app_up_to_date">You\'re all caught up!\nYour app is up to date.</string>
    <string name="ok">Close</string>
    <string name="help">Help</string>
    <string name="add_note_help_title">What you can do here</string>
    <string name="add_note_help_bullets">
        • Add images (tap **Image**)\n
        • Reorder images: long-press a thumbnail and drag\n
        • Remove an image: tap the × on a thumbnail\n
        • Optional title: type it or auto-fill from note\n
        • Write your note and tap **Save**
</string>
    <string name="help_add_images">Add images</string>
    <string name="help_auto_title">Auto-fill title from note</string>
    <string name="title_set">Title set</string>
    <string name="type_note_first">Type your note first</string>
    <string-array name="update_messages">
        <item>&#8211; <b>Previous Update:</b></item>
        <item>&#8211; New animations added for smoother transitions.</item>
        <item>&#8211; Introduced a color palette for contacts customization.</item>
        <item>&#8211; Enhanced UI and animations.</item>
        <item>&#8211; Improved stability and performance.</item>
        <item>&#8211; Added Notes and Contact sections.</item>
        <item>&#8211; New customizable Page Settings.</item>
        <item>&#8211; Expanded localization (Spanish, English).</item>
        <item>&#8211; Added functionality to refresh images online.</item>
        <item>&#8211; Dark Mode optimizations for better visibility.</item>
        <item>&#8211; Fixed bugs related to app crashes on startup.</item>
        <item>&#8211; Performance improvements for smoother navigation.</item>
        <item>&#8211; Updated in-app icons for a modern look.</item>
        <item>&#8211; Improved network handling for low connectivity.</item>
        <item>&#8211; Enhanced security measures and bug fixes.</item>
        <item>&#8211; New animations added for transitions.</item>
        <item>&#8211; Increased compatibility with latest Android versions.</item>
        <item>&#8211; Optimized battery usage for longer app sessions.</item>
        <item>&#8211; Improved accessibility support for screen readers.</item>
        <item>&#8211; Faster loading times and improved app speed.</item>
        <item>&#8211; New **Widget  added to display a countdown timer for automatic image refresh.</item>
        <item>&#8211; Added Cards to home screen: Quickly access activities in one place.</item>
        <item>&#8211; Thank you for using our app!</item>
    </string-array>
    <string name="download_complete_title">Download Complete</string>
    <string name="app_update_title">App Update</string>
    <string name="app_up_to_date_message">Your app is up to date!</string>
    <string name="installation_downloaded">File downloaded.</string>
    <string name="install_message_template">File downloaded. %s</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="flight_information">Information</string>
    <string name="clicked_item">Item clicked at position %1$d</string>
    <string name="back_arrow_desc">backarrow</string>
    <string name="carousel_content_description">Carousel of images</string>
    <string name="card4">card 4</string>
    <string name="carousel_description">for recycleview material design3</string>
    <string name="fab_content_desc_main">Main FAB</string>
    <string name="fab_content_desc_camera">Camera FAB</string>
    <string name="fab_content_desc_insert_photo">Photo FAB</string>
    <string name="fab_content_desc_contact">Contact FAB</string>
    <string name="fab_content_desc_settings">Settings FAB</string>
    <string name="changelog_title">Changelog for %s</string>
    <string name="load_image_2">North</string>
    <string name="load_image_1">Curb</string>
    <string name="south">South</string>
    <string name="button_load_image_1">Load Image 1</string>
    <string name="button_load_image_2">Load Image 2</string>
    <string name="button_load_image_south">Load Image South</string>
    <string name="logo_description">logo description</string>
    <string name="expand_button">expand button</string>
    <string name="airport_image">airport round image</string>
    <string name="bottomsheet">Menu</string>
    <string name="openmenu">openmenu</string>
    <string name="drag_handle_arrow">handle arrow</string>
    <string name="hello_welcome">Hello, welcome to the new bottom menu!</string>
    <string name="future_icons">Future icons will be placed here.</string>
    <string name="error_loading">Error Loading</string>
    <string name="menu">menu</string>
    <string name="card1">card 1</string>
    <string name="card2">card2</string>
    <string name="card3">card3</string>
    <string name="card_4_support_text">News</string>
    <string name="close">Close</string>
    <string name="card_1"> Welcome </string>
    <string name="card_2">News</string>
    <string name="flights">Flights</string>
    <string name="card_4">Fbo</string>
    <string name="image1">image 1</string>
    <string name="image2">image 2</string>
    <string name="image3">image 3</string>
    <string name="image4">image 4</string>
    <string name="grand_teton_national">Grand Teton National Park</string>
    <string name="card_image">Image</string>
    <string name="confirm_call_messagebutton">call button</string>
    <string name="drive_safely_and_stay_focused">Drive safely and stay focused.</string>
    <string name="open_maps">Open Maps</string>
    <string name="time_in_past">Selected time is in the past. Please choose a future time.</string>
    <string name="reminder_scheduled">Reminder set for: %1$s at %2$d:%3$d</string>
    <string name="menu_settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="qrcode">download our app</string>
    <string name="search">Search</string>
    <string name="scan_qr_code">scan qr code</string>
    <string name="delete_selected">Delete Selected</string>
    <string name="news">News</string>
    <string name="welcome">Welcome</string>
    <string name="fbo_services">FBO Services</string>
    <string name="more_information">More Information</string>
    <string name="other_services">Other Services</string>
    <string name="main_section">Main Section</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="Home">Home</string>
    <string name="All_contacts">All contacts</string>
    <string name="Import_contacts">import contacts</string>
    <string name="openAddNoteScreen">All Notes</string>
    <string name="send_feedback">Send</string>
</resources>