<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_oui_home"
            android:title="@string/Home" />
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/contact_page_24dp_ffffff_fill1_wght400_grad0_opsz24"
            android:title="@string/Contact" />
        <item
            android:id="@+id/nav_all_contacts"
            android:icon="@drawable/groups_2_24dp_ffffff_fill1_wght400_grad0_opsz24"
            android:title="@string/All_contacts" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings_account_box_24dp_ffffff_fill1_wght400_grad0_opsz24"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/openAddNoteScreen"
            android:icon="@drawable/book_24dp_ffffff_fill1_wght400_grad0_opsz24"
            android:title="@string/openAddNoteScreen" />

    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_search"
            android:title="Search"
            android:icon="@drawable/person_search_24dp_ffffff_fill1_wght400_grad0_opsz24"
            tools:ignore="HardcodedText" />

        <item
            android:id="@+id/action_delete"
            android:title="@string/delete_selected"
            android:icon="@drawable/delete_24dp_ffffff_fill1_wght400_grad0_opsz24"
            android:visible="false" />
    </group>

</menu>