<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_oui_home"
            android:title="@string/Home" />

        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/contact_page_24dp_ffffff_fill1_wght400_grad0_opsz24"
            android:title="@string/Contact" />

        <!-- Feedback -->
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/report_24dp_ffffff_fill1_wght400_grad0_opsz24"
            android:title="@string/feedback" />

        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/contact_emergency_24dp_ffffff_fill1_wght400_grad0_opsz24"
            android:title="@string/contact_info" />

    </group>

</menu>
