<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="6dp">

    <!-- First Button and TextView -->
    <Button
        android:id="@+id/reopenBottomSheetButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/openmenu"
        android:background="@drawable/__dot_menu_bottom"
        android:gravity="center"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:padding="4dp"
        android:layout_marginTop="0dp"
        android:scaleX="0.8"
        android:scaleY="0.8"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/reopenbutton"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttonLoadImage1"
        android:layout_marginStart="12dp"
        tools:ignore="HardcodedText,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/reopenbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bottomsheet"
        android:textColor="?attr/colorControlNormal"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.Widget.SmallText"
        app:layout_constraintTop_toBottomOf="@id/reopenBottomSheetButton"
        app:layout_constraintStart_toStartOf="@id/reopenBottomSheetButton"
        app:layout_constraintEnd_toEndOf="@id/reopenBottomSheetButton" />

    <!-- Second Button and TextView -->
    <Button
        android:id="@+id/buttonLoadImage1"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/button_load_image_1"
        android:background="@drawable/button_ripple"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:padding="4dp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textBelowButton1"
        app:layout_constraintStart_toEndOf="@id/reopenBottomSheetButton"
        app:layout_constraintEnd_toStartOf="@id/buttonLoadImage2"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textBelowButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load_image_1"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.Widget.SmallText"
        android:textColor="?attr/colorControlNormal"
        app:layout_constraintTop_toBottomOf="@id/buttonLoadImage1"
        app:layout_constraintStart_toStartOf="@id/buttonLoadImage1"
        app:layout_constraintEnd_toEndOf="@id/buttonLoadImage1" />

    <!-- Third Button and TextView -->
    <Button
        android:id="@+id/buttonLoadImage2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:backgroundTint="@color/colorBoxDark"
        android:background="@drawable/button_ripple_north"
        android:contentDescription="@string/button_load_image_2"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:padding="4dp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textBelowButton2"
        app:layout_constraintStart_toEndOf="@id/buttonLoadImage1"
        app:layout_constraintEnd_toStartOf="@id/buttonLoadImageSouth"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textBelowButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load_image_2"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.Widget.SmallText"
        android:textColor="?attr/colorControlNormal"
        app:layout_constraintTop_toBottomOf="@id/buttonLoadImage2"
        app:layout_constraintStart_toStartOf="@id/buttonLoadImage2"
        app:layout_constraintEnd_toEndOf="@id/buttonLoadImage2" />

    <!-- Fourth Button and TextView -->
    <Button
        android:id="@+id/buttonLoadImageSouth"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/button_ripple_south"
        android:contentDescription="@string/button_load_image_south"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:padding="4dp"
        android:gravity="center"
        android:layout_marginEnd="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textBelowButton3"
        app:layout_constraintStart_toEndOf="@id/buttonLoadImage2"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textBelowButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/south"
        android:textAppearance="@style/TextAppearance.Widget.SmallText"
        android:textStyle="bold"
        android:textColor="?attr/colorControlNormal"
        app:layout_constraintTop_toBottomOf="@id/buttonLoadImageSouth"
        app:layout_constraintStart_toStartOf="@id/buttonLoadImageSouth"
        app:layout_constraintEnd_toEndOf="@id/buttonLoadImageSouth" />

</androidx.constraintlayout.widget.ConstraintLayout>
