<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layered_peaks_haikei">

    <!-- Carousel RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/carousel_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:contentDescription="@string/carousel_description" />

    <!-- Fullscreen Image Container -->
    <RelativeLayout
        android:id="@+id/fullscreenContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E1000000"
        android:visibility="gone"
        android:alpha="0">

        <!-- TouchImageView for fullscreen display -->
        <com.ortiz.touchview.TouchImageView
            android:id="@+id/fullscreenImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/imageview"
            android:scaleType="center" />
        <ImageButton
            android:id="@+id/closeButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="16dp"
            android:background="@drawable/ripple_close_button"
            android:src="@drawable/baseline_close_24"
            android:contentDescription="@string/closeimage" />
    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
