<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="0dp"
    android:fitsSystemWindows="true">


    <com.google.android.material.circularreveal.cardview.CircularRevealCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="0dp"
        android:backgroundTint="@color/item_cards_day_night"
        app:cardCornerRadius="0dp"
        app:cardPreventCornerOverlap="true"
        app:strokeWidth="0dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_gravity="center|start|top"
            android:background="@color/bottom_bar"
            android:elevation="2dp"
            android:gravity="center_horizontal"
            android:textAlignment="center"
            app:logo="@drawable/contact_logo_topbar"
            app:logoAdjustViewBounds="true"
            app:logoDescription="@string/logo_description"
            app:navigationContentDescription="@string/back_arrow_desc"
            app:title="@string/page_name"
            app:titleCentered="true" />

        <FrameLayout
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="0dp"
            android:padding="0dp" />
    </com.google.android.material.circularreveal.cardview.CircularRevealCardView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>
